# ru-normalizr

./: .gitignore  CHANGELOG.md  LICENSE  PYPI_RELEASE_CHECKLIST.md  README.md  __init__.py  __main__.py  abbreviation_rules.py  abbreviations.py  dates_time.py  dictionary.py  input.txt  latinization.py  normalizer.py  options.py  ordinal_utils.py  preprocess_utils.py  pyproject.toml  roman_numerals.py  urls.py  years.py
.github/workflows/: ci.yml
dictionaries/: latinization_rules.dic  your_dictionary.dic  your_rules.dic
dictionaries/latinization/: latinization_rules.dic
examples/: your_dictionary.dic
numerals/: __init__.py  _constants.py  _helpers.py  cardinals.py  decimals.py  ordinals.py  symbols.py
scripts/: dev.py
tests/: test_api.py  test_foreign_script_abbreviations.py  test_hyphen_tokens.py  test_regressions.py  test_reported_regressions.py  test_stages.py
