[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ru-normalizr"
version = "0.1.0"
description = "Normalization-only Russian text preprocessing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "NickZaitsev"}]
keywords = ["russian", "normalization", "nlp", "text-processing", "tts"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: Russian",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "num2words>=0.5.13",
  "pymorphy3>=2.0",
  "pymorphy3-dicts-ru>=2.0",
  "roman>=4.0",
]

[project.urls]
Homepage = "https://github.com/NickZaitsev/ru-normalizr"
Repository = "https://github.com/NickZaitsev/ru-normalizr"
Issues = "https://github.com/NickZaitsev/ru-normalizr/issues"
Changelog = "https://github.com/NickZaitsev/ru-normalizr/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ipa = ["eng_to_ipa"]

[project.scripts]
ru-normalizr = "ru_normalizr.__main__:main"

[tool.setuptools]
packages = ["ru_normalizr", "ru_normalizr.numerals"]
include-package-data = false

[tool.setuptools.package-dir]
ru_normalizr = "."

[tool.setuptools.package-data]
ru_normalizr = ["py.typed", "dictionaries/latinization_rules.dic"]

[tool.setuptools.exclude-package-data]
ru_normalizr = [
  "LICENSE",
  "CHANGELOG.md",
  "VERSIONING.md",
  "PYPI_RELEASE_CHECKLIST.md",
  "requirements-dev.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["build", "dist", ".tmp_dist", "ru_normalizr.egg-info", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
